--- a/index.ipynb
+++ b/index.ipynb
@@ -480,11 +480,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = "
+    "recoleta_marker = marker_two"
    ]
   },
   {
